--- a/rectangle_assesment/pom.xml
+++ b/rectangle_assesment/pom.xml
@@ -13,5 +13,12 @@
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>[LATEST]</version>
+        </dependency>
+    </dependencies>
 
 </project>
