--- a/rectangle_assesment/pom.xml
+++ b/rectangle_assesment/pom.xml
@@ -51,7 +51,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <mainClass>Main</mainClass>
+                    <mainClass>run.Main</mainClass>
                 </configuration>
             </plugin>
         </plugins>
